# SS-CE

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .oclint  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.bat  package.py  ssce.pc.in  style-macros.lua  upload.py  windows.py
cmake/: CopyJemalloc.cmake.in  SSCE128Int.cmake  SSCEModules.cmake  TargetArch.cmake  TargetPlatform.cmake  VerbLink.cmake.in
docs/: Doxyfile.in
docs/notes/: ai_project_1.md
docs/notes/memswap/: avx_swap_timings.csv  presentation.xcf  sse_swap_timings.csv  vec64_swap_timings.csv
src/: Config.h.in  Lifecycle_linux.c  Lifecycle_mac.c  Lifecycle_win.c  Macros.h  Mkdir.h  Modules.h.in
src/ai/search/: SearchProblem.h  SearchProblem.hpp
src/ai/search/informed/: BestFirst.c  BestFirst.h  BestFirst.hpp
src/ai/search/uninformed/: BFS.c  BFS.h  BFS.hpp  DFS.c  DFS.h  DFS.hpp
src/argparse/: ArgParse.c  ArgParse.h  ArgParse.hpp
src/clock/: Clock.h  Clock.hpp  Clock_linux.c  Clock_mac.c  Clock_win.c
src/cmdparser/: CmdParser.c  CmdParser.h  CmdParser.hpp
src/core/: Comp_mac.c  Comp_win.c  Lifecycle_linux.c  Lifecycle_mac.c  Lifecycle_win.c  PosixThreads.h  Runtime.c  Runtime.h  Runtime.hpp  Runtime_arm.c  Runtime_arm64.c  Runtime_i386.c  Runtime_linux.c  Runtime_mac.c  Runtime_win.c  Runtime_x86_64.c  ntdll.h
src/logger/: Logger.c  Logger.h  Logger.hpp
src/math/: BiggerNumbers.h  MathExtra.c  MathExtra.h  MathExtra.hpp  MinMax.h  MinMax.hpp  PrimeGenerator.c  PrimeGenerator.h  PrimeGenerator.hpp
src/math/crypto/: Hash.h  Hash.hpp  HashSpooky.c  HashXX.c  Hash_x86_64.c
src/memory/: FAlloc.c  FAlloc.h  GAlloc.c  GAlloc.h  GAlloc.hpp  Memory.h  Memory.hpp  Swap.h  Swap_arm.c  Swap_arm64.c  Swap_i386.c  Swap_x86_64.c
src/string/: SStrings.c  SStrings.hpp  SStrings_linux.c  SStrings_mac.c  SStrings_win.c  Strings.c  Strings.h  Strings.hpp  Strings_linux.c  Strings_mac.c  Strings_win.c
src/structures/: Bitfield.h  Bitfield.hpp  Dequeue.c  Dequeue.h  Dequeue.hpp  HashSet.c  HashSet.h  HashSet.hpp  Heap.c  Heap.h  Heap.hpp  Interface.h  Interface.hpp  Sort.c  Sort.h  Sort.hpp  SortedArray.c  SortedArray.h  SortedArray.hpp
src/thread/: Threads.h  Threads.hpp
test/: ai_search.h  ai_search_informed_bestfirst.c  ai_search_uninformed_bfs.c  ai_search_uninformed_dfs.c  clock_timings.c  core_runtime.cpp  logger_core.c  logger_core.cpp  math_crypto_hash.c  math_crypto_hash_spooky.c  math_crypto_hash_xx.c  math_primegen.c  memory_falloc.c  memory_galloc.c  memory_jemalloc.c  memory_swap.c  string_concat.c  string_memswap.c  string_multiconcat.c  string_puts.c  strings.c  struct.c  structures_bitfield.c  structures_dequeue.c  structures_hashset.c  structures_heap.c  structures_heapsort.c  structures_sorted_array.c  test_utils.h  test_utils.hpp
